Grouped text and buttons in a separate div. Them applied flexbox to the whole pop-up message with 0 shrink to ensure the ! icon doesn't get squished.

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,20 +11,20 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  width: fit-content;
-  margin: auto;
   margin-bottom: 32px;
 }
 
 .plants {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 52px;
 }
 
 .info {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 200px;
 }
 
 /* do not edit this footer */
